test/Fail/Issue1944-checkParams.err
Issue1944-checkParams.agda:25.18-19: error: [InvalidProjectionParameter]
Invalid projection parameter ⦃ A = A ⦄
when checking that the expression f ⦃ A = A ⦄ r has type _15
